...
    <string name="user_profile_days_active">Days\nactive</string>
    <string name="user_profile_achievement_levels">Achievement\nlevels</string>
    <string name="user_profile_current_week_title">Last 7 days</string>

    <string name="user_profile_dates_mapped">Days you’ve mapped recently</string>

    <string name="user_login">Login</string>
    <string name="user_logout">Logout</string>
    <string name="osm_profile">OSM Profile</string>

    <string name="oauth_communication_error">Unable to reach the authorization server</string>
    <string name="oauth_failed_permissions">Authorization failed: All listed permissions need to be granted</string>

...
    <string name="overlay_mtb_scale_4_description">Challenging and technical obstacles: big boulders, roots, scree, steep ramps; pivot switchbacks, flat drops with pedal strikes; perfect balance, precise braking, and rear-wheel repositioning required.</string>
    <string name="overlay_mtb_scale_5">Grade 5</string>
    <string name="overlay_mtb_scale_5_description">Ultra-steep blocky terrain with counter‑uphills, boulder fields, landslides, pivot switchbacks with obstacles, back‑to‑back high drops and fallen trees. Bike carrying around obstacles impossible; riding unavoidable. Trial mastery required.</string>
    <string name="overlay_mtb_scale_6">Grade 6</string>
    <string name="overlay_mtb_scale_6_description">Dangerous and impassable terrain, not suitable for mountain biking.</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_work_space">WorkSpaceActivity</string>
    <string name="quest_kerb_title">Is there a curb here</string>
    <string name="submit">Submit</string>
    <string name="quest_already_answered">This element has already been answered by another user.</string>
    <string name="quest_check_fetching_details">Fetching latest details…</string>
    <string name="upload_a_picture">Upload a picture</string>
...
