...

    @Composable
    fun MyAlertDialog(showDialog: Boolean, onDismiss: () -> Unit) {
        if (showDialog) {
            AlertDialog(
                onDismissRequest = onDismiss,
                title = { Text(text = "Session Expired") },
                text = { Text("Please login again.") },
                confirmButton = {
                    TextButton(onClick = onDismiss) {
                        Text("Close")
                    }
                }
            )
        }
    }
}
...
